# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2007 OTRS GmbH, http://otrs.org/
# --
# $Id: CHANGES,v 1.392 2007-05-16 10:49:39 mh Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (GPL). If you
# did not receive this file, see http://www.gnu.org/licenses/gpl.txt.
# --

2.2.0 beta4 (2007/??/??)
 - (2007/05/16) Improved check of needed stuff in Send() function to prevent
    bugs like bug# 1887.
 - (2007/05/14) Fixed bug# 1866 - Error while DB upgrade from 2.1.5 to 2.2-beta3.
 - (2007/05/09) Fixed bug# 1825 - SQL ticket_history INSERT syntax error in
    HistoryAdd().
 - (2007/05/07) Fixed bug# 1787 - Problem with cachefilenames of the stats module
    in win32.

2.2.0 beta3 (2007/05/07)
 - (2007/05/04) Fixed bug# 1788 - Problem with cachefile in win32.
 - (2007/05/04) Fixed bug# 1773 - DB-error in phone ticket if sla but no
    service is selected.
 - (2007/05/04) Fixed bug# 1035 - OTRS does not set encoding for the mysql
    database connection (i.e. UTF-8).
 - (2007/05/04) Fixed bug# 1778 - Config option Database::Connect should be
    possible.
 - (2007/05/04) Fixed bug# 1611 - Now the Statsmodule use the mirror db if
    configured.
 - (2007/05/02) Fixed bug# 1809 - Fixed typo in variable name (PrioritiesStrg ->
    PriotitiesStrg).
 - (2007/04/27) Fixed bug# 1670 - If no result the generation of pie graph throws
    error.
 - (2007/04/26) Added feature to use no BaseDN (or '') for agent and customer
    authentification (see ticket# 2007030642000446).
 - (2007/04/24) Fixed bug# 1769 - If I change the ticket SLA, the history is
    not relfecting this change.
 - (2007/04/24) Fixed bug# 1768 - If I change the ticket service, the history
    is not relfecting this change.

2.2.0 beta2 (2007/04/16)
 - (2007/04/16) Fixed bug# 1448 - Apache::Registry in README.webserver wrong,
    mod_perl2 is missing.
 - (2007/04/16) Fixed bug# 1286 - apache configuration should use